faq section fixed

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,569 +1,14 @@
-// Google Fonts
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
+//Global stylesheet where files will be imported to
 
-//Themes
-html {
-  --blue: #678fff;
-  --lynxWhite: #f7f7f7;
-  --bruntSienna: #e37151;
-  --PaynesGrey: #353748;
-  --darkGray: #888;
-  --lightGray: #999;
-  --dimGray: #6d6d6d;
-  --green: #66ad57;
-  --mainFont: "Rubik", sans-serif;
-  --lighGray-Filter: invert(80%) sepia(9%) saturate(16%) hue-rotate(343deg)
-    brightness(86%) contrast(84%);
-  --darkGray-Filter: #999;
-  --white-Filter: invert(100%) sepia(91%) saturate(38%) hue-rotate(254deg)
-    brightness(110%) contrast(110%);
-  --blue-Filter: invert(48%) sepia(79%) saturate(1121%) hue-rotate(203deg)
-    brightness(101%) contrast(101%);
-}
+//Variables
+@import "./scss/components/variables";
 
-//Globals
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+//Global styling and components
+@import "./scss/components/globals";
+@import "./scss/components/components";
 
-body {
-  line-height: 1.5;
-  font-family: var(--mainFont);
-  background-color: var(--lynxWhite);
-}
+//Content
+@import "./scss/content/content";
 
-//Resusable components
-a {
-  color: #000;
-  text-decoration: none;
-}
-img {
-  width: 100%;
-  display: block;
-}
-li {
-  list-style-type: none;
-}
-button {
-  cursor: pointer;
-  font-family: inherit;
-  outline: 0;
-}
-.text {
-  font-size: 1rem;
-  color: var(--PaynesGrey);
-  font-weight: 400;
-  letter-spacing: 0.7px;
-}
-.btn {
-  margin: 0.6rem 0;
-  color: #fff;
-  background: var(--blue);
-  border: none;
-  font-weight: 400;
-  font-size: 14px;
-  border-radius: 10px;
-  padding: 1rem 2rem;
-  letter-spacing: 0.5px;
-}
-
-//Navbar
-.navbar-wrapper {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding-top: 0.6rem;
-}
-.nav-btns {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 1rem 0.8rem 0.5rem;
-}
-.social-icons span img,
-#navbar-toggler img {
-  filter: var(--lighGray-Filter);
-}
-.nav-btns span img:first-child {
-  width: 24px;
-}
-.nav-btns span img:last-child {
-  width: 18px;
-  margin-left: 0.2rem;
-}
-.social-icons span {
-  cursor: pointer;
-  &:hover {
-    filter: var(--darkGray-Filter);
-  }
-}
-#navbar-toggler img {
-  width: 16px;
-}
-#navbar-toggler {
-  border: none;
-  padding: 0.45rem 0.45rem;
-  border-radius: 4px;
-  background: none;
-}
-#navbar-toggler:hover {
-  background: var(--dimGray);
-}
-#navbar-toggler:hover img {
-  filter: var(--white-Filter);
-}
-.social-icons {
-  display: flex;
-  flex-direction: column;
-  margin-right: 1.6rem;
-  position: relative;
-  span {
-    display: flex;
-    align-items: center;
-  }
-  &-list {
-    position: absolute;
-    top: calc(100% + 0.8rem);
-    background: #fff;
-    border-radius: 5px;
-    padding: 1rem 1rem 0.35rem;
-    right: -20px;
-    width: 135px;
-    box-shadow: 0 2.5px 20px 0 rgba(0, 0, 0, 0.15);
-    display: none;
-  }
-  li {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-bottom: 0.7rem;
-    img {
-      width: 21px;
-      margin-right: 10px;
-    }
-    span {
-      opacity: 0.9;
-      font-size: 0.9em;
-      font-weight: 300;
-      transition: 0.2s;
-      &:hover {
-        text-decoration: underline;
-        transition: 0.2s;
-      }
-    }
-  }
-}
-
-.socialIconsToggle {
-  display: block;
-}
-
-.navbar-collapse {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 210px;
-  background: #fff;
-  border-left: 1.5px solid rgba(170, 170, 170, 0.5);
-  padding: 2rem 0 0 1.5rem;
-  transform: translateX(100%);
-  transition: all 0.4s ease;
-  z-index: 12;
-}
-// Show navbar
-.show-navbar-collapse {
-  transform: translateX(0);
-}
-#nav-close-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 1.4rem 1.2rem 0 auto;
-  border: none;
-  background: none;
-  img {
-    width: 20px;
-    filter: invert(80%) sepia(9%) saturate(16%) hue-rotate(343deg)
-      brightness(86%) contrast(84%);
-    &:hover {
-      filter: invert(48%) sepia(1%) saturate(0%) hue-rotate(188deg)
-        brightness(87%) contrast(89%);
-    }
-  }
-}
-
-.nav-links {
-  margin-bottom: 3.1rem;
-  h4 {
-    text-transform: uppercase;
-    font-size: 0.68em;
-    color: var(--darkGray);
-    font-weight: 400;
-    margin-bottom: 0.65rem;
-  }
-  li a {
-    text-transform: capitalize;
-    font-size: 0.85em;
-    opacity: 0.8;
-    display: block;
-    font-weight: 400;
-    margin-bottom: 0.3rem;
-    color: #333;
-  }
-}
-/* content top */
-.content-top {
-  text-align: center;
-  width: 96%;
-  margin: 0 auto;
-}
-.site-img img {
-  width: 240px;
-  margin: 0 auto 1rem auto;
-}
-.top-list {
-  img {
-    filter: var(--blue-Filter);
-    width: 22px;
-  }
-}
-.search-form {
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  border: 1.5px solid rgba(170, 170, 170, 0.5);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.07);
-  margin: 1.75rem auto;
-  border-radius: 5px;
-}
-.search-query {
-  width: 100%;
-  border: none;
-  padding: 0.8rem 0;
-  outline: 0;
-  font-family: var(--mainFont);
-  font-size: 1em;
-  letter-spacing: 0.5px;
-  font-weight: 400;
-  padding: 0.75rem 1rem;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.search-query::placeholder {
-  color: var(--lightGray);
-  font-weight: 400;
-}
-.search-btn {
-  display: block;
-  padding: 0.7rem 0;
-  border: none;
-  width: 52px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  background-color: #fff;
-  color: var(--lightGray);
-  position: relative;
-  &::after {
-    position: absolute;
-    content: "";
-    top: -1px;
-    bottom: -1px;
-    right: -1px;
-    left: 0;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-  img {
-    width: 20px;
-    filter: var(--darkGray-Filter);
-  }
-  &:hover {
-    background-color: var(--green);
-    &::after {
-      background-color: var(--green);
-      z-index: -1;
-    }
-    img {
-      filter: var(--white-Filter);
-    }
-  }
-}
-.top-title {
-  padding: 0.3rem 0 0.5rem 0;
-  font-size: 1.8rem;
-  font-weight: 900;
-  color: var(--PaynesGrey);
-}
-.top-list {
-  width: 168px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0.5rem 0 1rem 0;
-  li {
-    display: flex;
-    align-items: center;
-    margin-right: 1.3rem;
-    padding: 0.5rem 0;
-    span {
-      padding-left: 0.2rem;
-      font-weight: 500;
-      color: var(--PaynesGrey);
-    }
-  }
-}
-.rating {
-  display: flex;
-  justify-content: center;
-  margin: 0.4rem 0;
-  img {
-    width: 13px;
-  }
-  img:nth-child(5) {
-    filter: var(--lighGray-Filter);
-  }
-  span {
-    font-size: 0.7rem;
-    padding-left: 0.5rem;
-  }
-}
-
-/* Middle content  */
-.content-mid {
-  text-align: center;
-  margin: 3.2rem 0 0 0;
-  h4 {
-    color: var(--PaynesGrey);
-    margin-bottom: 2.2rem;
-  }
-  &-list {
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-.content-item {
-  background: #fff;
-  box-shadow: 0 10px 16px -8px rgba(0, 0, 0, 0.2);
-  border-radius: 15px;
-  padding: 2.2rem 0.05rem;
-  margin-bottom: 1.6rem;
-  h3 {
-    margin-bottom: 6px;
-  }
-  img {
-    width: 100px;
-    margin: 0 auto 2rem auto;
-  }
-  .text {
-    width: 80%;
-    margin: 0 auto;
-    font-weight: 300;
-    line-height: 1.6;
-  }
-  a {
-    font-weight: 600;
-    color: #678fff !important;
-  }
-}
-
-.curved-svg {
-  margin-top: 3rem;
-  margin-bottom: -10px;
-}
-.curved-content {
-  background: var(--bruntSienna);
-  color: #fff;
-  &-wrapper {
-    padding-top: 1.5rem;
-    margin: 0 auto;
-    h2 {
-      line-height: 1.2;
-      font-weight: 900;
-    }
-    .text {
-      padding: 1.4rem 0;
-      font-size: 1rem;
-      font-weight: 400;
-      letter-spacing: 0.5px;
-      line-height: 1.2;
-      color: var(--lynxWhite);
-    }
-    img {
-      margin-top: 5rem;
-    }
-  }
-  .btn {
-    background: rgba(0, 0, 0, 0.4);
-    &:hover {
-      background: rgba(0, 0, 0, 0.5);
-    }
-  }
-}
-
-/* content bottom */
-.content-bottom {
-  padding: 6rem 1.2rem;
-}
-.content-bottom > h2 {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 900;
-  color: var(--PaynesGrey);
-  padding-bottom: 2.6rem;
-}
-.faq-head {
-  display: grid;
-  grid-template-columns: 50px auto;
-  align-items: center;
-  span {
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    background: rgba(170, 170, 170, 0.3);
-    cursor: pointer;
-  }
-  img {
-    width: 16px;
-    border-radius: 50%;
-    filter: var(--darkGray-Filter);
-  }
-  h3 {
-    opacity: 0.9;
-    font-size: 1.2rem;
-    font-weight: 500;
-    cursor: pointer;
-  }
-}
-.faq-item {
-  border-bottom: 1px solid rgba(170, 170, 170, 0.3);
-  padding: 1.8rem 0;
-}
-.faq-body {
-  margin-left: 50px;
-  overflow: hidden;
-  max-height: 0;
-  transition: all 0.5s ease;
-}
-
-/*** show faq-body ***/
-.show-faq-body {
-  max-height: 800px;
-  padding-top: 1.6rem;
-}
-.faq-body .text {
-  line-height: 1.9;
-  opacity: 0.9;
-  letter-spacing: 0;
-  font-weight: 300;
-  font-size: 1em;
-  color: var(--PaynesGrey);
-  a {
-    color: var(--blue);
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-//Bottom content
-.content-bottom .btn {
-  margin: 2.4rem auto 0 auto;
-  padding: 1rem 2rem;
-  display: block;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-/* Media Queries */
-@media screen and (min-width: 480px) {
-  .content-item {
-    width: 350px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width: 768px) {
-  .search-form {
-    width: 665px;
-  }
-  .top-list {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    li {
-      padding: 0;
-    }
-  }
-  .content-item {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-  }
-  .curved-content-wrapper h2 {
-    font-size: 2.5rem;
-  }
-  .curved-content-wrapper .text {
-    font-size: 1.2rem;
-  }
-  .faq-list {
-    width: 740px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .content-item {
-    width: 100%;
-    z-index: 1;
-    height: 360px;
-  }
-  .content-mid-list {
-    width: 92%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
-    margin-bottom: -26rem;
-  }
-  .curved-content-wrapper {
-    padding-top: 12rem;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .content-mid-list {
-    width: 70%;
-  }
-  .curved-content-wrapper img {
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .curved-content-wrapper {
-    padding-top: 9rem;
-  }
-}
-@media screen and (min-width: 1400px) {
-  .curved-content-wrapper {
-    padding-top: 7rem;
-  }
-}
-
-/* fullscreen modal */
-.fullscreenModal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: transparent;
-  z-index: 10;
-}
+//Responsive
+@import "./scss/responsive/responisve";
